--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "build": "webpack",
+    "build:watch": "webpack --watch",
     "start": "clasp push --watch"
   },
   "dependencies": {
@@ -9,6 +11,11 @@
     "@types/google-apps-script": "~1.0.20",
     "@types/lodash": "~4.14.165",
     "clasp": "~1.0.0",
-    "typescript": "3.9.7"
+    "exports-loader": "~1.1.1",
+    "ts-loader": "~8.0.11",
+    "typescript": "3.9.7",
+    "webpack": "~5.8.0",
+    "webpack-cli": "~4.2.0",
+    "clean-webpack-plugin": "~3.0.0"
   }
 }
