--- a/appsscript.json
+++ b/appsscript.json
@@ -1,11 +1,18 @@
 {
   "timeZone": "Europe/Bucharest",
   "dependencies": {
-    "libraries": [{
-      "userSymbol": "LodashGS",
-      "libraryId": "1SQ0PlSMwndIuOAgtVJdjxsuXueECtY9OGejVDS37ckSVbMll73EXf2PW",
-      "version": "5"
-    }]
+    "libraries": [
+      {
+        "userSymbol": "LodashGS",
+        "libraryId":  "1SQ0PlSMwndIuOAgtVJdjxsuXueECtY9OGejVDS37ckSVbMll73EXf2PW",
+        "version":    "5"
+      },
+      {
+        "userSymbol": "Cheerio",
+        "libraryId":  "1ReeQ6WO8kKNxoaA_O0XEQ589cIrRvEBA9qcWpNqdOP17i47u6N9M5Xh0",
+        "version":    "12"
+      }
+    ]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
